# cmakeProject

./: .gitignore  CMakeLists.txt
boostOptionsTests/: CMakeLists.txt  adl.cpp  test.cpp
buildNinja/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  firstApp  loggerGTest  logger_example  rules.ninja
cmake/: functions.cmake
examples/: CMakeLists.txt  example.cpp  inserterExample.cpp  iteratorCategories.cpp
inc/: header.h
include/: header.h
include/utils/: math.h
logger/: CMakeLists.txt  main.cpp
logger/inc/: logger.h
logger/src/: logger_example.cpp
logger/test/: test.cpp
source/: main.cpp
source/utils/: math.cpp
src/: main.cpp
src/utils/: math.cpp
test_utils/: CMakeLists.txt  NonOwningPtr.hpp  owned_pointer.h  test_utils.cpp
utils/: CMakeLists.txt
utils/inc/: LibTool.h  dummy.h
utils/src/: LibTool.cpp  dummy.cpp  dummy2.cpp
workplace/: CMakeLists.txt  main.cpp  test.cpp
